Replace minima theme with clean custom layout
- Remove minima theme (caused duplicate titles and hamburger menu)
- Add minimal custom default layout with inline CSS
- Yellow tint background with clean card design
- No navigation clutter, just content

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Privacy Policies
 description: Privacy policies for our mobile applications
-theme: minima
 baseurl: ""
 url: ""
 
@@ -13,3 +12,4 @@ kramdown:
 exclude:
   - README.md
   - .gitignore
+  - assets
