--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Privacy Policies
 description: Privacy policies for our mobile applications
-baseurl: ""
-url: ""
+baseurl: "/privacy-policy-manager"
+url: "https://jatin-shihora.github.io"
 
 # Markdown settings
 markdown: kramdown
